# hagadias

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Pipfile  README.md  azure-pipelines.yml  game_location_for_tests.example  gameroot.py  gameroot_test.py  pyproject.toml  qudobject.py  qudobject_props_test.py  qudobject_test.py  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check.yml
hagadias/: __init__.py  character_codes.py  constants.py  dicebag.py  equipbrain.py  gameroot.py  helpers.py  qudobject.py  qudobject_props.py  qudpopulation.py  qudtile.py  svalue.py  tileanimator.py  tileanimator_creategif.py  tilepainter.py  tilestyle.py  xml.py
tests/: conftest.py  dicebag_test.py  equipbrain_test.py  gameroot_test.py  helpers_test.py  qudobject_props_test.py  qudobject_test.py  qudtile_test.py  svalue_test.py
