[tool.poetry]
name = "hagadias"
version = "1.2.0"
description = "Extract game data from the Caves of Qud roguelike"
authors = [
    "syntaxaire <syntaxaire@gmail.com>",
    "egocarib <egocaribx@gmail.com>",
    "elvers <revels0800@protonmail.com>",
    "Trash Monks <monkstrash@gmail.com>",
]
maintainers = [
    "syntaxaire <syntaxaire@gmail.com>",
    "egocarib <egocaribx@gmail.com>",
    "elvers <revels0800@protonmail.com>",
    "Trash Monks <monkstrash@gmail.com>",
]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/TrashMonks/hagadias"
keywords = ["Caves", "Qud"]

[tool.poetry.dependencies]
python = "^3.10"
anytree = "^2.8.0"
pefile = "^2022.5.30"
Pillow = "^9.2.0"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"
black = "^22.10.0"
coverage = "^6.4.2"
pytest-cov = "^4.0.0"
pre-commit = "^3.1.1"

[tool.black]
line-length = 100
target-version = ['py310']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
