[tool.poetry]
name = "hagadias"
version = "1.3.0"
description = "Extract game data from the Caves of Qud roguelike"
authors = [
    "syntaxaire <syntaxaire@gmail.com>",
    "egocarib <egocaribx@gmail.com>",
    "elvers <revels0800@protonmail.com>",
    "Trash Monks <monkstrash@gmail.com>",
]
maintainers = [
    "syntaxaire <syntaxaire@gmail.com>",
    "egocarib <egocaribx@gmail.com>",
    "elvers <revels0800@protonmail.com>",
    "Trash Monks <monkstrash@gmail.com>",
]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/TrashMonks/hagadias"
keywords = ["Caves", "Qud"]

[tool.poetry.dependencies]
python = "^3.13"
anytree = "^2.8"
pefile = "^2022.5"
Pillow = "^11.1"
lxml = "^5.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"
black = "^22.10.0"
coverage = "^6.4.2"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"

[tool.black]
line-length = 100
target-version = ['py310']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
